Update Quantum Field Theory.ipynb
OK

--- a/Untitled Folder/Quantum Field Theory.ipynb
+++ b/Untitled Folder/Quantum Field Theory.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Gussian Integrals "
+    "# Gaussian Integrals "
    ]
   },
   {
@@ -148,6 +148,50 @@
     "Then, \n",
     "\n",
     "$I'=\\int_{-\\infty}^{+\\infty}e^{-\\alpha{x^2}}={\\frac{1}{\\sqrt\\alpha}}\\int_{-\\infty}^{+\\infty}e^{-y^2}dy=\\sqrt\\frac{\\pi}{\\alpha}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The next extension of the basic Gaussian Integral is to add powers of x. For example, "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$I=\\int_{-\\infty}^{+\\infty}x^ne^{-\\alpha{x^2}}dx$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If n is odd, it is easy to see that this is just 0. Let n=1.A plot of $f(x)=xe^{-x^2}$ in the figure below shows this is an odd function, so it must integrate to zero since we are integrating over the entire real line."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![img](https://www.researchgate.net/profile/Zhang_Junhua3/publication/275974111/figure/fig1/AS:613447872040975@1523268778397/Plot-for-y-xe-x-2-The-number-of-solutions-for-xe-x-2-d-is-two-at-most.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The integration over $(-\\infty,0)$ exactly cancels the integration over$(0,\\infty)$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Hence, \n",
+    "\n",
+    "${I=\\int_{-\\infty}^{+\\infty}x^ne^{-\\alpha{x^2}}dx=0}$ for n odd."
    ]
   },
   {
